--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "resend": "^0.16.0"
+    "resend": "^2.1.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
